# ohseeare

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
fonts/: Inter-Medium.h  Inter-Regular.h
models/: install.sh
src/: ocr_engine.h  ohseeare-gui.cpp  ohseeare.cpp  sco.h  style.h
